@@ -1,0 +1,17 @@
+print ""
+print "Reference selected for GXD which have been not been used."
+print "Those that have also been statused as 'Never Used' are so noted."
+print ""
+
+select r.jnumID, 
+category = case when isNeverUsed = 1 then "Never Used" else "" end
+from BIB_All_View r, BIB_DataSet_Assoc dsa, BIB_DataSet ds
+where not exists (select 1 from GXD_Assay e
+where r._Refs_key = e._Refs_key)
+and not exists (select 1 from GXD_Index e
+where r._Refs_key = e._Refs_key)
+and r._Refs_key = dsa._Refs_key
+and dsa._DataSet_key = ds._DataSet_key
+and ds.abbreviation = "Expression"
+order by r.jnumID
+go
